--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -7,7 +7,13 @@
         "service_worker": "/background.js"
     },
     "action": {
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "default_icon": {
+            "16": "icons/16.png",
+            "32": "icons/32.png",
+            "48": "icons/48.png",
+            "128": "icons/128.png"
+          }
     },
     "content_scripts": [
         {
@@ -20,5 +26,16 @@
         }
     ],
     "options_page": "options.html",
-    "devtools_page": "devtools.html"
+    "devtools_page": "devtools.html",
+    "permissions": [
+        "storage", 
+        "alarms", 
+        "notifications"
+    ],
+    "icons": {
+        "16": "icons/16.png",
+        "32": "icons/32.png",
+        "48": "icons/48.png",
+        "128": "icons/128.png"
+    }
 }
